# data-visualization

./: .gitignore  CMakeLists.txt  README.md
include/: DataLoader.h  GraphWidget.h  MainWindow.h  OpenGLWidget.h  OpenGLWidget2D.h
resources/: sample_data.csv
src/: DataLoader.cpp  GraphWidget.cpp  MainWindow.cpp  OpenGLWidget.cpp  OpenGLWidget2D.cpp  main.cpp  pbPlots.cpp
